Implement gesture analysis feature with OpenAI integration and UI controls

--- a/static/index.html
+++ b/static/index.html
@@ -28,6 +28,7 @@
         <div class="video-wrapper">
             <video id="localVideo" autoplay muted playsinline></video>
             <div class="video-label">📹 Video Local</div>
+            <button id="gestureToggle" onclick="toggleGestureAnalysis()">🤏 Analizar Gestos</button>
         </div>
         <div class="video-wrapper">
             <video id="remoteVideo" autoplay playsinline></video>
