Add gesture animation feature and enhance gesture analysis logging

--- a/static/index.html
+++ b/static/index.html
@@ -33,6 +33,7 @@
         <div class="video-wrapper">
             <video id="remoteVideo" autoplay playsinline></video>
             <div class="video-label">📺 Video Remoto</div>
+            <button onclick="testGestureAnimation()" style="position: absolute; top: 10px; right: 10px; padding: 5px; background: orange; color: white; border: none; border-radius: 5px; font-size: 0.8em;">🧪 Test Animación</button>
         </div>
     </div>
 
