Update page title and header to reflect video and audio features in WebRTC

--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>💬 WebRTC Chat con IA 🤖 | Comunicación en tiempo real 🚀</title>
+    <title>💬 WebRTC con vídeo 📽️ y audio 🔊 | Comunicación en tiempo real 🚀</title>
     <link rel="stylesheet" href="/static/styles.css">
     
     <!-- Favicon -->
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <h1>💬 WebRTC Chat con IA 🤖</h1>
+    <h1>💬 WebRTC con vídeo 📽️ y audio 🔊</h1>
 
     <button id="start">Iniciar conexión 🚀</button>
 
